force-app/main/default/objects/Client_Event_Relation__c/Client_Event_Relation__c.object-meta.xml
<CustomObject>
    <label>Client Event Relation</label>
    <nameField>
        <label>Client Event Relation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Event Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>