force-app/main/default/objects/Client_Event_Relation__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Event Relations</relationshipLabel>
    <relationshipName>Client_Event_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>