force-app/main/default/objects/Client_Event_Relation__c/fields/Custom_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Custom_Record_ID__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <inlineHelpText>Converting the 15 case sensitive ID into an 18 case insensitive ID</inlineHelpText>
    <label>Custom Record ID</label>
    <type>Text</type>
</CustomField>