force-app/main/default/objects/Client_Event_Relation__c/fields/Event_Link__c.field-meta.xml
<CustomField>
    <fullName>Event_Link__c</fullName>
    <formula>&quot;https://betterrehab.lightning.force.com/lightning/r/Event/&quot;+Event_Id__c+&quot;/view&quot;</formula>
    <label>Event Link</label>
    <type>Text</type>
</CustomField>