force-app/main/default/objects/Client_Event_Relation__c/fields/Time_Changed__c.field-meta.xml
<CustomField>
    <fullName>Time_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Time Changed</label>
    <type>Checkbox</type>
</CustomField>