force-app/main/default/objects/Client_Event_Relation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Event_Id__c</columns>
    <columns>Event_Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Id__c</field>
        <operation>equals</operation>
        <value>00U9n0000007yaZEAQ</value>
    </filters>
    <label>All</label>
</ListView>