force-app/main/default/objects/Client_Event_Relation__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Status__c</columns>
    <columns>Event_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Custom_Record_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Booked</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>a478u0000001JnV</value>
    </filters>
    <label>All</label>
</ListView>